--- a/config/locales/pl-PL-admin.yml
+++ b/config/locales/pl-PL-admin.yml
@@ -142,6 +142,8 @@ pl:
         permissions: Uprawnienia
         reject: Odrzuć
         share: Udostępnij
+        share_tokens: Linki dostępu
+        soft_delete: Miękkie usuwanie
         verify: Zweryfikuj
       admin_terms_of_use:
         accept:
@@ -176,6 +178,7 @@ pl:
         create:
           error: Wystąpił błąd podczas tworzenia nowej ketegorii.
           success: Kategoria została utworzona.
+        deprecated: Pamiętaj, że obszary (areas) są przestarzałe i zostaną usunięte w przyszłych wersjach. Zamiast nich używaj taksonomii. Jedynym modułem, który obecnie korzysta z obszarów, jest moduł inicjatyw.
         destroy:
           has_spaces: Kategoria ma elementy zależne; aby można było ją usunąć, nie może mieć elementów zależnych.
           success: Kategoria została usunięta
@@ -391,6 +394,8 @@ pl:
         scopes: Obszary
         settings: Ustawienia
         static_pages: Strony
+        taxonomies: Taxonomie
+        taxonomy_filters: Filtry dla taxonomii
         user_groups: Grupy użytkowników
         users: Użytkownicy
       metrics:
@@ -474,8 +479,37 @@ pl:
             phone: Telefon
             state: Stan
             users_count: Liczba użytkowników
+      moderated_users:
+        index:
+          actions:
+            bulk_actions:
+              actions_dropdown: Akcje
+              block:
+                title: Zablokuj
+                update_moderated_user_button: Zablokuj wybranych
+              unblock:
+                title: Przywróć
+                update_moderated_user_button: Przywróć wybranych
+              unreport:
+                title: Cofnij zgłoszenie
+            ignore:
+              update_moderated_user_button: Cofnij zgłoszenie użytkowników
+          cancel: Anuluj
+          selected: Wybrane
       moderations:
         index:
+          actions:
+            actions_dropdown: Akcje
+            hide:
+              title: Ukryj
+              update_moderation_button: Ukryj wybrane zasoby
+            unhide:
+              update_moderation_button: Przywróć wybrane zasoby
+            unreport:
+              title: Cofnij zgłoszenie
+              update_moderation_button: Cofnij zgłoszenie dla wybranych zasobów
+          cancel: Anuluj
+          selected: wybrane
           title: Moderacje
         report:
           reasons:
@@ -671,6 +705,7 @@ pl:
         create:
           error: Podczas tworzenia nowego obszaru wystąpił błąd.
           success: Obszar został utworzony.
+        deprecated: Pamiętaj, że zakresy (scopes) są przestarzałe i zostaną usunięte w przyszłych wersjach. Zamiast nich używaj taksonomii. Jedynym modułem, który obecnie korzysta z zakresów, jest moduł inicjatyw.
         destroy:
           success: Obszar został usunięty
         edit:
@@ -743,6 +778,116 @@ pl:
         update:
           error: Podczas aktualizowania tej strony wystąpił błąd.
           success: Strona została zaktualizowana
+      taxonomies:
+        actions:
+          actions: Akcje
+          destroy: Usuń taksonomię i jej elementy
+          edit: Edytuj taksonomię i jej elementy
+          filters: Zarządzaj filtrami
+#        breadcrumb:
+#          edit: Edit taxonomy
+#          new: New taxonomy
+#        count: Associated resources
+#        create:
+#          invalid: There was a problem creating this taxonomy.
+#          success: Taxonomy created successfully.
+#        destroy:
+#          invalid: There was a problem destroying this taxonomy.
+#          success: Taxonomy successfully destroyed.
+#        edit:
+#          back: Back
+#          description: The items in this taxonomy will be used to classify or filter resources, such as participatory spaces or components. Use drag and drop to reorder the list.
+#          new_item: New item
+#          no_items: There are currently no items in this taxonomy. Create a list of items here to classify or filter resources, such as participatory spaces or components. Items can be nested up to three levels.
+#          subtitle: Items in "%{taxonomy_name}"
+#          title: Edit taxonomy "%{taxonomy_name}"
+#          update: Update
+        filters:
+          search_placeholder: Wyszukaj
+        index:
+          description: Taksonomie i filtry pozwalają administratorom sortować i organizować treści. Na przykład dodaj taksonomię z dzielnicami i osiedlami miasta, a następnie utwórz filtry obejmujące tylko dzielnice albo konkretną okolicę.
+          new_taxonomy: Nowa taksonomia
+          no_items_found: Nie znaleziono taksonomii spełniających kryteria wyszukiwania.
+        name: Nazwa
+        new:
+          create: Utwórz taksonomię
+          title: Nowa taksonomia
+        no_taxonomies: Obecnie nie ma żadnych taksonomii. Utwórz tutaj listę taksonomii i zdefiniuj elementy w każdej z nich, aby klasyfikować lub filtrować zasoby.
+#        table:
+#          to_next_page: Drag over for next page
+#          to_prev_page: Drag over for previous page
+        taxonomy_actions:
+          confirm_destroy: 'Czy na pewno chcesz usunąć %{name}? Spowoduje to również usunięcie wszystkich elementów podrzędnych. UWAGA: Zasoby, które używają tej taksonomii, nie zostaną zmienione, ale utracą odwołanie do tej taksonomii.'
+        total_filters: Filtry
+        total_items: Elementy w taksonomii
+#        update:
+#          invalid: There was a problem updating this taxonomy.
+#          success: Taxonomy updated successfully.
+      taxonomy_filters:
+        actions:
+          new_taxonomy_filter: Nowy filtr taksonomii
+        breadcrumb:
+          edit: Edytuj filtr
+          filters: Filtry
+          new: Nowy filtr
+        create:
+          error: Wystąpił problem podczas tworzenia tego filtra taksonomii.
+          success: Filtr taksonomii został pomyślnie utworzony.
+        destroy:
+          error: Wystąpił problem podczas usuwania tego filtra taksonomii.
+          success: Filtr taksonomii został pomyślnie usunięty.
+        edit:
+          back: Wstecz
+          title: Edytuj filtr taksonomii
+          update: Zaktualizuj filtr taksonomii
+#        form:
+#          all: All
+#          items:
+#            one: "%{count} item selected"
+#            other: "%{count} items selected"
+#          name_help: The title of the filter to be displayed in the frontend.
+#          no_items: No items are available for this taxonomy. You can create items in the taxonomy configuration settings.
+#          space_filter: Available as filter for
+#        index:
+#          description: A taxonomy filter allows admins to sort and filter participatory spaces based on a taxonomy. For example, add a taxonomy filter to sort processes by geographical scope.
+#          empty: There are currently no taxonomy filters. Create a list of taxonomy filters here to sort and filter participatory spaces based on a taxonomy.
+#          new_filter: New filter
+        new:
+#          back: Back
+          create: Utwórz filtr taksonomii
+          title: Nowy filtr taksonomii
+#        table:
+#          actions: Actions
+#          components_count: Components using this
+#          confirm_destroy: 'Are you sure you want to delete the filter %{name}? NOTE: Resources that are using this filter will not be affected but they will lose the reference to this filter.'
+#          destroy: Delete
+#          edit: Edit
+#          internal_name: Internal label
+#          name: Label
+#        update:
+#          error: There was a problem updating this taxonomy filter.
+#          success: Taxonomy filter updated successfully.
+#      taxonomy_filters_selector:
+#        new:
+#          add_new_items_html: If you need to set a new filter or item, do it through the configuration settings or by clicking <a href="%{url}">here</a>.
+#          items_count: "%{count} items"
+#          save: Save
+#        show:
+#          items_count: "%{count} items"
+#          remove: Remove
+#        taxonomies_select:
+#          filters: Filters
+#          select_filter: Select a filter
+#          select_taxonomy: Select a taxonomy
+#          taxonomies: Taxonomies
+#      taxonomy_items:
+#        edit:
+#          title: Edit item in %{taxonomy}
+#          update: Update item
+#        new:
+#          create: Create item
+#          none: None
+#          title: New item in %{taxonomy}
       titles:
         admin_log: Logi administratora
         area_types: Typy kategorii
@@ -759,6 +904,7 @@ pl:
         scopes: Obszary
         static_pages: Strony
         statistics: Działania
+        taxonomies: Taksonomie
         user_groups: Grupy użytkowników
         users: Administratorzy
       user_group:
