--- a/config/locales/pl-PL-admin.yml
+++ b/config/locales/pl-PL-admin.yml
@@ -135,6 +135,13 @@ pl:
       actions:
         add: Dodaj
         browse: Przeglądaj
+        confirm_delete_component: |
+          Czy na pewno chcesz usunąć ten komponent?<br>
+          Ten komponent zawiera:<br>
+          <ul class="list-disc ml-6 my-2">
+            <li class="font-bold">%{resources_count} zasobów</li>
+          </ul>
+          Jeśli zmienisz zdanie, możesz go później przywrócić.
         export: Eksport
         manage: Zarządzanie
         new: 'Nowy: %{name}'
@@ -145,6 +152,7 @@ pl:
         share_tokens: Linki dostępu
         soft_delete: Miękkie usuwanie
         verify: Zweryfikuj
+        view_deleted_components: Widok usuniętych komponentów
       admin_terms_of_use:
         accept:
           error: Wystąpił błąd podczas akceptowania warunków użytkowania dla administratorów.
@@ -274,6 +282,9 @@ pl:
             name: Nazwa komponentu
             scope: Zakres komponentu
             type: Typ komponentu
+            visibility: Widoczność
+        manage_trash:
+          title: Usunięte komponenty
         new:
           add: Dodaj komponent
           title: 'Dodaj komponent: %{name}'
@@ -285,10 +296,20 @@ pl:
         update:
           error: Wystąpił błąd podczas aktualizowania tego komponentu.
           success: Komponent został pomyślnie zaktualizowany.
+        visibility_label:
+          menu_hidden: Menu ukryte
+          published: Opublikowane
+          unpublished: Nieopublikowane
       conflicts:
         index:
           text: Wyszukaj według bieżącego adresu e-mail użytkownika, nazwy lub pseudonimu.
       dashboard:
+        pending_moderations:
+          announcement:
+            one: Jest %{count} oczekująca moderacja
+            other: "Oczekujące moderacje: %{count}"
+          goto_moderation: Idź do globalnych modearacji
+          title: Oczekujące moderacje
         show:
           view_more_logs: Zobacz więcej logów
           welcome: Witamy w panelu administracyjnym Decidim.
@@ -368,6 +389,8 @@ pl:
       logs:
         logs_list:
           no_logs_yet: Nie ma jeszcze logów
+      manage_trash:
+        deleted_items_warning: Aktualnie przeglądasz usunięte elementy. Aby wprowadzić jakiekolwiek edycje lub zmiany, musisz najpierw je przywrócić.
       managed_users:
         promotion:
           error: Podczas awansowania zarządzanego użytkownika wystąpił błąd.
@@ -393,11 +416,14 @@ pl:
         scope_types: Typy obszarów
         scopes: Obszary
         settings: Ustawienia
+        share_tokens: Linki dostępu
         static_pages: Strony
         taxonomies: Taxonomie
         taxonomy_filters: Filtry dla taxonomii
         user_groups: Grupy użytkowników
         users: Użytkownicy
+      tooltips:
+        deleted_component_info: Ten komponent można usunąć tylko wtedy, gdy jego status to 'Nieopublikowany'
       metrics:
         metrics:
           see_more_metrics: Zobacz więcej danych
@@ -449,8 +475,10 @@ pl:
             plural: Liczba mnoga
         share_token:
           fields:
+            actions: Akcje
             created_at: Utworzono
             expires_at: Wygasa
+            registered_only: Tylko dla zarejestrowanych?
             last_used_at: Ostatnio używane
             times_used: Ilość użyć
             token: Token
@@ -504,6 +532,7 @@ pl:
               title: Ukryj
               update_moderation_button: Ukryj wybrane zasoby
             unhide:
+              title: Przywróć
               update_moderation_button: Przywróć wybrane zasoby
             unreport:
               title: Cofnij zgłoszenie
@@ -721,15 +750,48 @@ pl:
       share_tokens:
         actions:
           confirm_destroy: Czy jesteś pewien, że chcesz usunąć ten token?
+          copy_link: Skopiuj link
           destroy: Usuń
+          edit: Edit
+          preview: Podgląd
           share: Udostępnij
         destroy:
           error: Wystąpił błąd podczas usuwania tokenu.
           success: Token został usunięty.
+        edit:
+          title: "Edytuj linki dostępu dla: %{name}"
+          update: Zaktualizuj
+        form:
+          automatic: Automatyczny
+          custom: Własny
+          custom_expiration: Własna data wygaśnięcia
+          custom_token: Własne słowo
+          expires_at: Wygasa
+          'false': 'Nie'
+          never_expire: Nigdy
+          registered_only: Tylko dla zarejestrowanych?
+          token: Klucz dostępu
+          'true': 'Tak'
         share_tokens:
           empty: Brak aktywnych tokenów
           help: Te tokeny są używane do publicznego udostępniania nieopublikowanego zasobu każdemu użytkownikowi. Zostaną one ukryte, gdy zasób zostanie opublikowany. Kliknij na ikonę udostępniania tokenu aby odwiedzić udostępniany adres URL.
           title: Udostępnij tokeny
+        index:
+          back_to_share_tokens: Wróć do linków dostępu
+          copied: Link dostępu skopiowany!
+          copy_message: Tekst został pomyślnie skopiowany do schowka.
+          create_new_token: Utwórz swój pierwszy link dostępu!
+          empty_html: Nie ma aktywnych linków dostępu. %{new_token_link}
+          never: Nigdy
+          new_share_token_button: Nowy link dostępu
+          share_tokens_help_html: |
+            Utwórz i udostępnij link dostępu, aby umożliwić innym wyświetlanie tego nieopublikowanego zasobu.
+            Linki dostępu mogą być ważne tylko dla zarejestrowanych uczestników lub — w razie potrzeby — mieć datę wygaśnięcia.
+            Aby udostępnić komuś nowy link dostępu, utwórz go, a następnie skopiuj link, używając ikony akcji „%{clipboard} schowek”.
+          title: 'Linki dostępu dla: %{name}'
+        new:
+          create: Utwórz
+          title: 'Nowy link dostępu dla: %{name}'
       shared:
         gallery:
           add_images: Dodaj obrazy
@@ -787,21 +849,21 @@ pl:
 #        breadcrumb:
 #          edit: Edit taxonomy
 #          new: New taxonomy
-#        count: Associated resources
+        count: Powiązane zasoby
 #        create:
 #          invalid: There was a problem creating this taxonomy.
 #          success: Taxonomy created successfully.
 #        destroy:
 #          invalid: There was a problem destroying this taxonomy.
 #          success: Taxonomy successfully destroyed.
-#        edit:
-#          back: Back
-#          description: The items in this taxonomy will be used to classify or filter resources, such as participatory spaces or components. Use drag and drop to reorder the list.
-#          new_item: New item
-#          no_items: There are currently no items in this taxonomy. Create a list of items here to classify or filter resources, such as participatory spaces or components. Items can be nested up to three levels.
-#          subtitle: Items in "%{taxonomy_name}"
-#          title: Edit taxonomy "%{taxonomy_name}"
-#          update: Update
+        edit:
+          back: Powrót
+          description: Elementy w tej taksonomii będą używane do klasyfikowania lub filtrowania zasobów, takich jak przestrzenie partycypacyjne lub komponenty. Użyj przeciągania i upuszczania, aby zmienić kolejność listy.
+          new_item: Nowa
+          no_items: Obecnie w tej taksonomii nie ma żadnych elementów. Utwórz tutaj listę elementów, aby klasyfikować lub filtrować zasoby, takie jak przestrzenie partycypacyjne lub komponenty. Elementy mogą być zagnieżdżone do trzech poziomów.
+          subtitle: Elementy w "%{taxonomy_name}"
+          title: Edycja taxonomii "%{taxonomy_name}"
+          update: Aktualizuj
         filters:
           search_placeholder: Wyszukaj
         index:
@@ -840,54 +902,54 @@ pl:
           back: Wstecz
           title: Edytuj filtr taksonomii
           update: Zaktualizuj filtr taksonomii
-#        form:
-#          all: All
-#          items:
-#            one: "%{count} item selected"
-#            other: "%{count} items selected"
-#          name_help: The title of the filter to be displayed in the frontend.
-#          no_items: No items are available for this taxonomy. You can create items in the taxonomy configuration settings.
-#          space_filter: Available as filter for
-#        index:
-#          description: A taxonomy filter allows admins to sort and filter participatory spaces based on a taxonomy. For example, add a taxonomy filter to sort processes by geographical scope.
-#          empty: There are currently no taxonomy filters. Create a list of taxonomy filters here to sort and filter participatory spaces based on a taxonomy.
-#          new_filter: New filter
+        form:
+          all: Wszystkie
+          items:
+            one: "Wybrano %{count} element"
+            other: "Wybrano %{count} elementów"
+          name_help: Tytuł filtra, który będzie wyświetlany w części widocznej dla użytkowników.
+          no_items: Brak dostępnych elementów dla tej taksonomii. Możesz utworzyć elementy w ustawieniach konfiguracji taksonomii.
+          space_filter: Dostępne jako filtr dla
+        index:
+          description: Filtr taksonomii umożliwia administratorom sortowanie i filtrowanie przestrzeni partycypacyjnych na podstawie taksonomii. Na przykład dodaj filtr taksonomii, aby sortować procesy według zasięgu geograficznego.
+          empty: Obecnie nie ma żadnych filtrów taksonomii. Utwórz tutaj listę filtrów taksonomii, aby sortować i filtrować przestrzenie partycypacyjne na podstawie taksonomii.
+          new_filter: Nowy filtr
         new:
-#          back: Back
+          back: Powrót
           create: Utwórz filtr taksonomii
           title: Nowy filtr taksonomii
-#        table:
-#          actions: Actions
-#          components_count: Components using this
-#          confirm_destroy: 'Are you sure you want to delete the filter %{name}? NOTE: Resources that are using this filter will not be affected but they will lose the reference to this filter.'
-#          destroy: Delete
-#          edit: Edit
-#          internal_name: Internal label
-#          name: Label
+        table:
+          actions: Działania
+          components_count: Komponenty używające tego filtra
+          confirm_destroy: 'Czy na pewno chcesz usunąć filtr %{name}? UWAGA: zasoby, które używają tego filtra, nie zostaną zmienione, ale utracą odwołanie do tego filtra.'
+          destroy: Usuń
+          edit: Edytuj
+          internal_name: Etykieta wewnętrzna
+          name: Etykieta
 #        update:
 #          error: There was a problem updating this taxonomy filter.
 #          success: Taxonomy filter updated successfully.
-#      taxonomy_filters_selector:
-#        new:
-#          add_new_items_html: If you need to set a new filter or item, do it through the configuration settings or by clicking <a href="%{url}">here</a>.
-#          items_count: "%{count} items"
-#          save: Save
-#        show:
-#          items_count: "%{count} items"
-#          remove: Remove
-#        taxonomies_select:
-#          filters: Filters
-#          select_filter: Select a filter
-#          select_taxonomy: Select a taxonomy
-#          taxonomies: Taxonomies
-#      taxonomy_items:
-#        edit:
-#          title: Edit item in %{taxonomy}
-#          update: Update item
-#        new:
-#          create: Create item
-#          none: None
-#          title: New item in %{taxonomy}
+      taxonomy_filters_selector:
+        new:
+          add_new_items_html: Jeśli chcesz ustawić nowy filtr lub element, zrób to w ustawieniach konfiguracji lub klikając <a href="%{url}">tutaj</a>.
+          items_count: "%{count} elementów"
+          save: Zapisz
+        show:
+          items_count: "%{count} elementów"
+          remove: Usuń
+        taxonomies_select:
+          filters: Filtry
+          select_filter: Wybierz filtr
+          select_taxonomy: Wybierz taksonomię
+          taxonomies: Taksonomie
+      taxonomy_items:
+        edit:
+          title: Edytuj element w %{taxonomy}
+          update: Zaktualizuj element
+        new:
+          create: Utwórz element
+          none: Brak
+          title: Nowy element w %{taxonomy}
       titles:
         admin_log: Logi administratora
         area_types: Typy kategorii
@@ -905,6 +967,7 @@ pl:
         static_pages: Strony
         statistics: Działania
         taxonomies: Taksonomie
+        taxonomy_filters: Filtry taksonomii dla „%{taxonomy}”
         user_groups: Grupy użytkowników
         users: Administratorzy
       user_group:
@@ -1001,5 +1064,7 @@ pl:
           title: Newslettery
         settings:
           title: Ustawienia
+        taxonomy_filters_selector:
+          title: Filtry
         users:
           title: Użytkownicy
