--- a/config/locales/pl-PL-assemblies.yml
+++ b/config/locales/pl-PL-assemblies.yml
@@ -240,6 +240,9 @@ pl:
             collaborator: Współpracownik
             moderator: Moderator
             valuator: Weryfikator
+      taxonomy_filters:
+        space_filter_for:
+          assemblies: Wszystkie zespoły
       titles:
         assemblies: Zespoły
         assemblies_types: Typy zespołów
