--- a/config/locales/pl-PL-admin.yml
+++ b/config/locales/pl-PL-admin.yml
@@ -330,6 +330,17 @@ pl:
           values:
             'false': Oficjalny
             'true': Nieoficjalny
+        participatory_space_private_users:
+          user_invitation_accepted_at_not_null:
+            label: Zaproszenie zaakceptowane
+            values:
+              'false': Niezaakceptowane
+              'true': Zaakceptowane
+          user_invitation_sent_at_not_null:
+            label: Zaproszenie wysłane
+            values:
+              'false': Niewysłane
+              'true': Wysłane
         private_space_eq:
           label: Prywatny
           values:
@@ -493,6 +504,7 @@ pl:
             email: E-mail
             last_sign_in_at: Ostatni dzień rejestracji
             name: Imię
+            published: Opublikowany
             role: Rola
             roles:
               admin: Admin
