--- a/config/locales/pl-PL-surveys.yml
+++ b/config/locales/pl-PL-surveys.yml
@@ -79,6 +79,10 @@ pl:
           update:
             invalid: Podczas zapisywania ankiety wystąpił błąd.
             success: Ankieta została zapisana pomyślnie.
+      directory:
+        surveys:
+          index:
+            surveys: Ankiety
       last_activity:
         new_survey_at_html: "<span>Nowa ankieta %{link}</span>"
       models:
@@ -95,3 +99,9 @@ pl:
           invalid: Podczas wypełniania ankiety wystąpił błąd.
           spam_detected: Wystąpił błąd podczas wypełniania formularza. Być może zostało to zrobione zbyt szybko, czy możesz spróbować ponownie?
           success: Twoja ankieta została wypełniona.
+        filters:
+          all: Wszystkie
+          state_values:
+            closed: Zamknięte
+            open: Otwarte
+        no_surveys_warning: Żadna ankieta nie spełnia kryteriów wyszukiwania lub nie ma obecnie otwartych ankiet.
